# system-manager

./: .envrc  .garnix.yaml  .gitignore  .pre-commit-config.yaml  .treefmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  buildbot-nix.toml  default.nix  flake.nix  lib.nix  package.nix  packages.nix  shell.nix  systems.nix  versions.json
.github/: settings.yaml
.github/workflows/: ci.yml  docs.yml  nix-build.yml  nix-fmt.yml  update-distro-images.yml  update-flake-lock.yml  update-images.yml  update-nix-version.yml
1.0/: 404.html  index.html  sitemap.xml
1.0/faq/: index.html
1.0/getting-started/: index.html
1.0/install/: index.html
1.0/introduction/: index.html
1.0/reference/: index.html
crates/system-manager/: Cargo.toml
crates/system-manager-engine/: Cargo.toml
crates/system-manager-engine/src/: activate.rs  deactivate.rs  lib.rs  main.rs  register.rs  systemd.rs  unit_info.rs
crates/system-manager-engine/src/activate/: etc_files.rs  services.rs  tmp_files.rs  users.rs
crates/system-manager-engine/src/activate/etc_files/: etc_tree.rs
crates/system-manager-engine/src/systemd/: manager.rs  unit.rs
crates/system-manager-engine/test/rust/register/: flake.nix
crates/system-manager/src/: main.rs
docs/: .gitignore  flake.nix  hooks.py  mkdocs.yml  options.nix
docs/site/: examples.md  faq.md  getting-started.md  index.md  install.md  introduction.md  reference-guide.md  requirements.md
docs/theme/: home.html
documentation/: flake.nix  jeff_code_notes.md  jeff_notes.md  mkdocs.yml
documentation/docs/: examples.md  getting-started.md  index.md  install.md  reference-guide.md
documentation/styles/: overrides.css
examples/: example.nix  flake.nix
lib/container-test-driver/: default.nix  distros.nix  images.json  make-rootfs.nix  nix-artifacts.json  nix-artifacts.nix  package.nix  pyproject.toml  test-script-prepend.py  ubuntu-rootfs.nix
lib/container-test-driver/test_driver/: __init__.py  driver.py  environment.py  errors.py  logger.py  machine.py  utils.py
main/: 404.html  index.html  sitemap.xml
main/examples/: index.html
main/faq/: index.html
main/getting-started/: index.html
main/install/: index.html
main/introduction/: index.html
main/reference/: index.html
main/search/: search_index.json
manual/: README.md  book.toml
manual/src/: SUMMARY.md  contributing.md  installation.md  introduction.md  preface.md  troubleshooting.md  usage.md
modules/: default.nix
nix/: lib.nix
nix/modules/: auto-upgrade.nix  default.nix  direnv.nix  environment.nix  etc.nix  system-manager.nix  systemd.nix  tmpfiles.nix
src/: activate.rs  engine.rs  generate.rs  lib.rs  main.rs  register.rs  systemd.rs
src/activate/: etc_files.rs  services.rs  tmp_files.rs
src/systemd/: manager.rs  unit.rs
templates/: system.nix
templates/nixos/: flake.nix
templates/standalone/: flake.nix
test/: 0001-nixos-test-driver-include-a-timeout-for-the-recv-cal.patch
test/docker/: conftest.py  default.nix  test_system_manager.py
test/nix/: flake.nix  images.json
test/nixos-test-driver/: default.nix  setup.py
testFlake/: container-tests.nix  flake.nix  vm-tests.nix
testFlake/container-tests/: auto-upgrade.nix  check-ephemeral-flag.nix  default.nix  empty-config.nix  environment-variables.nix  etc-files-with-glob.nix  example.nix  existing-files.nix  existing-group-members.nix  extra-init.nix  home-manager.nix  masked-units.nix  nginx-dhparams.nix  nix-enabled.nix  nix-flakes.nix  nix-remote-build.nix  nixpkgs-flake.nix  restart-if-changed.nix  sops-ssh-key.nix  ssh.nix  state-v0-v1-activate-migration.nix  state-v0-v1-deactivate-migration.nix  state-v0-v1-migration.nix  stop-on-removal.nix  system-checks.nix  (+5 more)
tools/: analyze-module-errors.sh  bump_nix_version.py  release.sh  update-images.py  update_distro_images.py
v1.0/: 404.html  CNAME  index.html  sitemap.xml
v1.1/: 404.html  index.html  sitemap.xml
(+181 files in other folders)
