[package]
name = "system_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "system-manager"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
dbus = "0.9.7"
env_logger = "0.10.0"
im = { version = "15.1.0", features = ["serde"] }
itertools = "0.10.5"
log = "0.4.17"
nix = "0.26.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
