[package]
name = "system_manager"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
  "Ramses <ramses@well-founded.dev>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "system-manager"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
dbus = "0.9.7"
env_logger = "0.11.0"
im = { version = "15.1.0", features = ["serde"] }
itertools = "0.13.0"
log = "0.4.17"
nix = "0.26.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.40"
