[workspace]
resolver = "2"
members = [
    "crates/system-manager-engine",
    "crates/system-manager",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ramses <ramses@well-founded.dev>"]

[workspace.dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
dbus = "0.9.7"
env_logger = "0.11.0"
im = { version = "15.1.0", features = ["serde"] }
itertools = "0.14.0"
log = "0.4.17"
nix = { version = "0.30.0", features = ["hostname", "user"] }
regex = "1.11.1"
rpassword = "7.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "2.0.0"

# Internal crates
system-manager-engine = { path = "crates/system-manager-engine" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
